# compressi.ty

./: .gitignore  AI_PLAYBOOK.md  Cargo.toml  IONICONS-CHEATSHEET.md  LICENSE  README.md  RELEASING.md  build.rs
assets/fonts/: README.md
packaging/: README.md
packaging/linux/: AppRun  build-bundle.sh  compressi.ty.appdata.xml  compressi.ty.desktop  compressity.desktop  io.github.Alpinnnn.Compressity.appdata.xml  io.github.Alpinnnn.Compressity.desktop  io.github.Alpinnnn.Compressity.metainfo.xml
packaging/windows/: build-installer.ps1  compressi.ty.iss  compressity.iss
src/: app.rs  branding.rs  file_dialog.rs  icons.rs  launch.rs  main.rs  process_lifecycle.rs  runtime.rs  settings.rs  single_instance.rs  theme.rs
src/modules/: mod.rs
src/modules/compress_audio/: logic.rs  mod.rs  models.rs  ui.rs
src/modules/compress_audio/logic/: analysis.rs  batch.rs  files.rs  parsing.rs  playback.rs  process.rs
src/modules/compress_audio/ui/: chrome.rs  controls.rs  details.rs  helpers.rs  queue.rs  settings_panel.rs  toolbar.rs  (+2 more)
src/modules/compress_documents/: engine.rs  logic.rs  mod.rs  models.rs  processor.rs  ui.rs
src/modules/compress_photos/: compressor.rs  logic.rs  mod.rs  models.rs  ui.rs
src/modules/compress_videos/: engine.rs  logic.rs  mod.rs  models.rs  preview_logic.rs  preview_runtime.rs  processor.rs  ui.rs
src/ui/: main_menu.rs  menu_card.rs  mod.rs  module_view.rs  settings_view.rs
src/ui/components/: hint.rs  mod.rs  panel.rs
src/ui/settings_view/: document_engine_section.rs  engine_section.rs  output_section.rs  processing_section.rs
(+53 files in other folders)
