[package]
name = "compressity"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

[dependencies]
dirs = "5"
eframe = "0.31"
ffmpeg-sidecar = "2.4"
image = { version = "0.25", features = ["avif", "webp"] }
img-parts = "0.4"
mozjpeg = "0.10"
open = "5.3"
rayon = "1.10"
resvg = "0.47"
rfd = "0.15"
webp = "0.3"

[build-dependencies]
ico = "0.4"
resvg = "0.47"
winresource = "0.1"
